Fixed sidebar scrolling with no overflow.

--- a/webapp/src/components/common/sidebar/sidebar.scss
+++ b/webapp/src/components/common/sidebar/sidebar.scss
@@ -15,7 +15,7 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
     width: 100vw;
-    height: 100vh;
+    max-height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
